--- a/package.json
+++ b/package.json
@@ -33,12 +33,18 @@
   "dependencies": {
     "@expo-google-fonts/space-grotesk": "^0.4.0",
     "@expo/metro-runtime": "~6.1.2",
+    "@invertase/react-native-apple-authentication": "^2.4.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@react-oauth/google": "^0.12.2",
+    "@supabase/supabase-js": "^2.78.0",
     "apisauce": "3.1.1",
     "date-fns": "^4.1.0",
     "expo": "54.0.21",
+    "expo-apple-authentication": "^8.0.7",
     "expo-application": "~7.0.7",
     "expo-build-properties": "~1.0.9",
     "expo-dev-client": "~6.0.12",
@@ -56,14 +62,17 @@
     "react-native-drawer-layout": "^4.0.1",
     "react-native-edge-to-edge": "~1.6.1",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-mmkv": "3.3.3",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.6.1",
-    "setimmediate": "^1.0.5"
+    "setimmediate": "^1.0.5",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
